--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,3 +1,4 @@
+# Stage 1: Create a jar file from the code
 FROM maven:3.9.9-eclipse-temurin-21 AS build
 WORKDIR /home/app
 COPY pom.xml pom.xml
@@ -5,6 +6,7 @@ RUN mvn dependency:go-offline
 COPY . .
 RUN mvn package -DskipTests
 
+# Stage 2 (runtime): Run the jar file in a minimal environment
 FROM eclipse-temurin:21-jre AS deploy
 WORKDIR /home/app
 COPY --from=build /home/app/target/product-template-0.0.1-SNAPSHOT.jar /home/app/product-template-0.0.1-SNAPSHOT.jar
