feat: Add image upload functionality for products with size restrictions

--- a/ingress/nginx.conf
+++ b/ingress/nginx.conf
@@ -23,4 +23,6 @@ server {
 	# Allow webhooks
 	proxy_set_header Upgrade $http_upgrade;
 	proxy_set_header Connection "Upgrade";
+
+	client_max_body_size 5M;
 }
