--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,3 +17,7 @@ jwt.refresh.bytes=20
 jwt.refresh.expiration=2592000000
 
 debug=true
+
+
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
