--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,3 +21,11 @@ debug=true
 
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=fiubacomedor@gmail.com
+spring.mail.password=bryu ewcx jigt fnvu
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
