Add log viewer container

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ DB_PORT=20501
 ADMINER_EXTERNAL_PORT=20502
 
 VOLUME_DIR=./data
+DOCKER_SOCKET=/var/run/docker.sock
 EXTERNAL_URL=http://localhost:20500
 
 # Database
