--- a/.env.prod
+++ b/.env.prod
@@ -3,6 +3,7 @@ DB_PORT=20501
 ADMINER_EXTERNAL_PORT=20502
 
 VOLUME_DIR=~/volumes
+DOCKER_SOCKET=/run/user/1005/docker.sock
 EXTERNAL_URL=https://grupo-05.tp1.ingsoft1.fiuba.ar
 
 # Database
