--- a/ingress/nginx.conf
+++ b/ingress/nginx.conf
@@ -7,6 +7,10 @@ server {
 		proxy_pass http://backend:8080;
 	}
 
+	location /logs {
+		proxy_pass http://dozzle:8080;
+	}
+
 	location / {
 		proxy_pass http://frontend:80;
 	}
