feat: implement order confirmation and management features, add cart functionality, and enhance user/staff role handling (not working)

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,6 +3,7 @@ FROM node:22 AS build
 WORKDIR /app
 COPY ./package.json ./package-lock.json ./
 RUN npm ci --omit=dev
+RUN npm install axios @types/axios
 COPY . .
 RUN npm run build
 
