--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^5.0.4",
+    "axios": "^1.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "typescript": "~5.9.2",
